# ai-agents-modeling-c41f

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: llm_outputs.json  metrics.json
src/research_workspace/: experiment.py
